--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -4,7 +4,6 @@
     height: 210px;
     .logoFooter{
         height: 50px;
-        position: fixed;
     }
 }
 
