--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -21,11 +21,11 @@ nav {
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 500;
-        font-size: 24px;
+        font-size: 62px;
         margin: 1.5%;
         width: 80%;
-        .logoHeader {
-            height: 24px;
+        .logooHeader {
+            height: 53px;
         }
     }
 }
