--- a/src/components/MyCard/myCard.scss
+++ b/src/components/MyCard/myCard.scss
@@ -20,7 +20,7 @@
         border-radius: 10px;
     }
     @media (max-width: 500px) {
-        height: 150px;
+        height: max-content;
         width: 200px;
     }
 }
